# indexes

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md
docs/conventions/: README.md
docs/decisions/: 0001-initial-architecture.md
docs/plans/: 2026-05-10-sp500-scraper-design.md  2026-05-10-sp500-scraper-plan.md
src/financial_indexes/: api.py  scraper.py
src/indexes/: __init__.py  api.py  scraper.py
tests/: test_api.py  test_scraper.py  test_setup.py
